name:                madl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/julienschmaltz/madl#readme
license:             MIT
license-file:        LICENSE
author:              Julien Schmaltz
maintainer:          j.schmaltz@tue.nl
copyright:           2017 TU Eindhoven
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src, examples
  exposed-modules:     Deadlock.DeadlockDetection,
                       Deadlock.Formulas,
                       Deadlock.Nuxmv,
                       Deadlock.Runner,
                       Deadlock.SMT,
                       Deadlock.SMTSolvers,
                       Echelon.Echelon,
                       Examples,
                       Examples.AllPrimitives,
                       Examples.InvariantTestNetwork,
                       Examples.Macros,
                       Examples.MergeBlock, 
                       Examples.MergeSwitchNetwork,
                       Examples.RedBlue,
                       Examples.ReorderTestNetwork,
                       Examples.SmallAutomatonNetwork,
                       Examples.SmallFunctionNetwork,
                       Examples.SmallMacroTest,
                       Examples.SmallMatchNetwork,
                       Examples.SmallSwitchNetwork,
                       Examples.SmallTestNetwork,
                       Examples.TwoAgents,
                       Examples.TypesAndFunctions, 
                       Madl.Base,
                       Madl.Cycles,
                       Madl.Identifiers,
                       Madl.Islands,
                       Madl.MsgTypes,
                       Madl.Network,
                       Madl.SourceInformation,
                       Invariants.Invariants,
                       Parser.IncludeStatement,
                       Parser.ASTTranslator,
                       Parser.MadlAST,
                       Parser.MadlLexer,
                       Parser.MadlParser,
                       Parser.MadlTypeChecker
                       Utils.Concatable,
                       Utils.Either,
                       Utils.Executable,
                       Utils.File,
                       Utils.Map,
                       Utils.NuxmvCode,
                       Utils.SMTCode,
                       Utils.Text,
                       Utils.Tuple
  other-modules:       BaseLike.CustomPrelude
  build-depends:       base >= 4.7 && < 5,
                       bytestring >= 0.10.8.1,
                       containers >= 0.5.8.1,
                       data-partition >= 0.3.0.0,
                       directory >= 1.3.0.0,
                       either-unwrap >= 1.1,
                       fgl >= 5.5.2,
                       fgl-visualize >= 0.1.0.1,
                       filepath >= 1.4.0,
                       hashable -any,
                       hashmap >= 1.3.0,
                       monad-parallel >= 0.7.2.2,
                       mtl >= 2.2.1,
                       parsec >= 3.1.9,
                       process >= 1.4.3.0,
                       random >= 1.1,
                       regex-tdfa >= 1.2.2,
                       regex-posix >= 0.95.2,
                       split >= 0.2.3.1,
                       temporary >= 1.2.0.4,
                       text >= 1.2.1,
                       zenc >= 0.1.1
  default-language:    Haskell2010



executable parser-exe
  hs-source-dirs:     app/Parser
  main-is:            parser-main.hs
  build-depends:      base,
                      madl,
                      text
  ghc-options: -Wall -Werror
  default-language: Haskell2010


executable invs-exe
  hs-source-dirs:     app/Invs
  main-is:            invariants-main.hs
  build-depends:      base,
                      hashmap,
                      madl,
                      text
  ghc-options: -Wall -Werror
  default-language: Haskell2010

executable dlockdetect-exe
  hs-source-dirs:     app/Dlockdetect
  main-is:            main.hs
  build-depends:      base,
                      hashmap,
                      madl
  ghc-options: -Wall -Werror
  default-language: Haskell2010


test-suite test-UnitTests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test/unit, src, examples
  other-modules:       Examples.TypesAndFunctions
  build-depends:       base >= 4.7,
                       containers -any,
                       either-unwrap -any,
                       parsec -any,
                       test-framework -any,
                       test-framework-hunit -any,
                       HUnit -any,
                       text -any,
                       hashmap -any,
                       hashable -any,
                       fgl -any,
                       madl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  CPP-options:         -DTESTING
  default-language:    Haskell2010
 

test-suite test-MadlNetwork
  type:                exitcode-stdio-1.0
  main-is:             TestNetwork.hs
  hs-source-dirs:      test/src/Madl
  build-depends:       base >= 4.7,
                       test-framework -any,
                       test-framework-hunit -any,
                       HUnit -any,
                       text -any,
                       hashmap -any,
                       madl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  CPP-options:         -DTESTING
  default-language:    Haskell2010

test-suite test-MadlParser
  type:                exitcode-stdio-1.0
  main-is:             ParserTest.hs
  hs-source-dirs:      test/app/Parser/, src, examples
  build-depends:       base >= 4.7,  
                       madl,
                       parsec >= 3.1,
                       test-framework -any,
                       test-framework-hunit -any,
                       HUnit -any,
                       text -any
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  CPP-options:         -DTESTING
  default-language:    Haskell2010


test-suite test-MadlTypeChecker
  type:               exitcode-stdio-1.0
  main-is:            TypeCheckerTest.hs
  hs-source-dirs:     test/app/Parser, src, examples
  build-depends:      base >= 4.7,
                      containers -any,
                      madl,
                      fgl -any,
                      either-unwrap -any,
                      hashable -any,
                      hashmap -any,
                      parsec >= 3.1,
                      test-framework -any,
                      test-framework-hunit -any,
                      HUnit -any,
                      text -any
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  CPP-options:         -DTESTING
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/julienschmaltz/madl
